// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DowntimeHistory page should render downtime history view and change filters 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--margin-xlarge StyledProps--padding-left-small StyledProps--padding-right-small"
  >
    <div
      class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-flex-end"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-xxlarge StyledProps--main StyledProps--flex StyledProps--flex-alignItems-flex-end"
      >
        <div
          class="StyledProps--font StyledProps--main"
          style="width: 250px;"
        >
          <label
            class="Label--main"
          >
            common.monitoredServices
          </label>
          <div
            class="bp3-popover-wrapper Select--main bp3-fill"
          >
            <div
              class="bp3-popover-target"
            >
              <div
                class="bp3-input-group"
              >
                <input
                  autocomplete="off"
                  class="bp3-input"
                  placeholder="- Select -"
                  style="padding-right: 0px;"
                  type="text"
                  value=""
                />
                <span
                  class="bp3-input-action"
                >
                  <span
                    class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                    icon="chevron-down"
                  >
                    <svg
                      data-icon="chevron-down"
                      height="14"
                      viewBox="0 0 16 16"
                      width="14"
                    >
                      <desc>
                        chevron-down
                      </desc>
                      <path
                        d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <button
          aria-label="common.filters.clearFilter"
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-link"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            common.filters.clearFilter
          </span>
        </button>
      </div>
      <div
        class="bp3-input-group ui-search-box ExpandingSearchInput--main   ExpandingSearchInput--alwaysExpanded ExpandingSearchInput--light"
        data-name=""
        style="width: 220px; max-width: 220px;"
      >
        <span
          class="bp3-icon StyledProps--main ExpandingSearchInput--icon StyledProps--color StyledProps--color-grey700"
          data-icon="thinner-search"
        >
          <svg
            fill="none"
            height="14"
            viewBox="0 0 16 16"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </span>
        <input
          class="bp3-input  ExpandingSearchInput--filter"
          dir="auto"
          placeholder="search"
          style="padding-right: 38px;"
          type="search"
          value=""
        />
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main PageBody--pageBody downtimeList"
      data-name="page-body"
      data-testid="page-body"
    >
      <div
        class="StyledProps--font StyledProps--main StyledProps--margin-top-large"
      >
        <div
          class="TableV2--table"
        >
          <div
            class="TableV2--header"
            role="row"
          >
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 23%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                CV.SLODOWNTIME.DOWNTIMENAME
              </p>
            </div>
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 10%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                TYPELABEL
              </p>
            </div>
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 15%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                PIPELINE.STARTTIME
              </p>
            </div>
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 15%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                COMMON.ENDTIME
              </p>
            </div>
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 10%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                PIPELINE.DURATION
              </p>
            </div>
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 13%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                CV.AFFECTEDSERVICES
              </p>
            </div>
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 14%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                CV.SLODOWNTIME.CATEGORY
              </p>
            </div>
          </div>
          <div
            class="TableV2--body"
          >
            <div
              class="TableV2--row TableV2--card"
              role="row"
            >
              <div
                class="TableV2--cells"
              >
                <div
                  class="TableV2--cell"
                  role="cell"
                  style="width: 23%;"
                >
                  <p
                    class="StyledProps--font StyledProps--main firstLine"
                    title="one time test"
                  >
                    one time test
                  </p>
                </div>
                <div
                  class="TableV2--cell"
                  role="cell"
                  style="width: 10%;"
                >
                  <p
                    class="StyledProps--font StyledProps--main firstLine"
                    title="Onetime"
                  >
                    common.occurrence.oneTime
                  </p>
                </div>
                <div
                  class="TableV2--cell"
                  role="cell"
                  style="width: 15%;"
                >
                  <div
                    class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main"
                  >
                    <p
                      class="StyledProps--font StyledProps--main firstLine"
                      title="February 13, 2023"
                    >
                      February 13, 2023
                    </p>
                    <p
                      class="StyledProps--font StyledProps--main secondLine"
                      title="5:45 PM (Asia/Baghdad)"
                    >
                      5:45 PM (Asia/Baghdad)
                    </p>
                  </div>
                </div>
                <div
                  class="TableV2--cell"
                  role="cell"
                  style="width: 15%;"
                >
                  <div
                    class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main"
                  >
                    <p
                      class="StyledProps--font StyledProps--main firstLine"
                      title="February 13, 2023"
                    >
                      February 13, 2023
                    </p>
                    <p
                      class="StyledProps--font StyledProps--main secondLine"
                      title="5:50 PM (Asia/Baghdad)"
                    >
                      5:50 PM (Asia/Baghdad)
                    </p>
                  </div>
                </div>
                <div
                  class="TableV2--cell"
                  role="cell"
                  style="width: 10%;"
                >
                  <p
                    class="StyledProps--font StyledProps--main firstLine"
                  >
                    5 cv.minutes
                  </p>
                </div>
                <div
                  class="TableV2--cell"
                  role="cell"
                  style="width: 13%;"
                >
                  <div
                    class="Layout--horizontal StyledProps--main StyledProps--flex"
                  >
                    <div
                      class="Layout--vertical StyledProps--main"
                    >
                      <p
                        class="StyledProps--font StyledProps--main firstLine affectedServices"
                        title="newone"
                      >
                        newone
                      </p>
                      <p
                        class="StyledProps--font StyledProps--main secondLine affectedServices"
                        title="demo-env"
                      >
                        demo-env
                      </p>
                    </div>
                  </div>
                </div>
                <div
                  class="TableV2--cell"
                  role="cell"
                  style="width: 14%;"
                >
                  <p
                    class="StyledProps--font StyledProps--main firstLine"
                    title="Deployment"
                  >
                    deploymentText
                  </p>
                </div>
              </div>
            </div>
            <div
              class="TableV2--row TableV2--card"
              role="row"
            >
              <div
                class="TableV2--cells"
              >
                <div
                  class="TableV2--cell"
                  role="cell"
                  style="width: 23%;"
                >
                  <p
                    class="StyledProps--font StyledProps--main firstLine"
                    title="one time"
                  >
                    one time
                  </p>
                </div>
                <div
                  class="TableV2--cell"
                  role="cell"
                  style="width: 10%;"
                >
                  <p
                    class="StyledProps--font StyledProps--main firstLine"
                    title="Onetime"
                  >
                    common.occurrence.oneTime
                  </p>
                </div>
                <div
                  class="TableV2--cell"
                  role="cell"
                  style="width: 15%;"
                >
                  <div
                    class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main"
                  >
                    <p
                      class="StyledProps--font StyledProps--main firstLine"
                      title="February 13, 2023"
                    >
                      February 13, 2023
                    </p>
                    <p
                      class="StyledProps--font StyledProps--main secondLine"
                      title="9:30 PM (Asia/Bangkok)"
                    >
                      9:30 PM (Asia/Bangkok)
                    </p>
                  </div>
                </div>
                <div
                  class="TableV2--cell"
                  role="cell"
                  style="width: 15%;"
                >
                  <div
                    class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main"
                  >
                    <p
                      class="StyledProps--font StyledProps--main firstLine"
                      title="February 13, 2023"
                    >
                      February 13, 2023
                    </p>
                    <p
                      class="StyledProps--font StyledProps--main secondLine"
                      title="9:35 PM (Asia/Bangkok)"
                    >
                      9:35 PM (Asia/Bangkok)
                    </p>
                  </div>
                </div>
                <div
                  class="TableV2--cell"
                  role="cell"
                  style="width: 10%;"
                >
                  <p
                    class="StyledProps--font StyledProps--main firstLine"
                  >
                    5 cv.minutes
                  </p>
                </div>
                <div
                  class="TableV2--cell"
                  role="cell"
                  style="width: 13%;"
                >
                  <div
                    class="Layout--horizontal StyledProps--main StyledProps--flex"
                  >
                    <div
                      class="Layout--vertical StyledProps--main"
                    >
                      <p
                        class="StyledProps--font StyledProps--main firstLine affectedServices"
                        title="demo-service"
                      >
                        demo-service
                      </p>
                      <p
                        class="StyledProps--font StyledProps--main secondLine affectedServices"
                        title="demo-env"
                      >
                        demo-env
                      </p>
                    </div>
                    <span
                      class="bp3-popover-wrapper bp3-dark"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <div
                          class="StyledProps--font StyledProps--main msBox StyledProps--padding-small StyledProps--margin-right-xlarge"
                          tabindex="0"
                        >
                          +
                          1
                        </div>
                      </span>
                    </span>
                  </div>
                </div>
                <div
                  class="TableV2--cell"
                  role="cell"
                  style="width: 14%;"
                >
                  <p
                    class="StyledProps--font StyledProps--main firstLine"
                    title="ScheduledMaintenance"
                  >
                    cv.sloDowntime.scheduledMaintenance
                  </p>
                </div>
              </div>
            </div>
            <div
              class="TableV2--row TableV2--card"
              role="row"
            >
              <div
                class="TableV2--cells"
              >
                <div
                  class="TableV2--cell"
                  role="cell"
                  style="width: 23%;"
                >
                  <p
                    class="StyledProps--font StyledProps--main firstLine"
                    title=""
                  >
                    
                  </p>
                </div>
                <div
                  class="TableV2--cell"
                  role="cell"
                  style="width: 10%;"
                >
                  <p
                    class="StyledProps--font StyledProps--main firstLine"
                    title="Onetime"
                  >
                    common.occurrence.oneTime
                  </p>
                </div>
                <div
                  class="TableV2--cell"
                  role="cell"
                  style="width: 15%;"
                >
                  <div
                    class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main"
                  >
                    <p
                      class="StyledProps--font StyledProps--main firstLine"
                      title="January 1, 1970"
                    >
                      January 1, 1970
                    </p>
                    <p
                      class="StyledProps--font StyledProps--main secondLine"
                      title="5:30 AM (Asia/Calcutta)"
                    >
                      5:30 AM (Asia/Calcutta)
                    </p>
                  </div>
                </div>
                <div
                  class="TableV2--cell"
                  role="cell"
                  style="width: 15%;"
                >
                  <div
                    class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main"
                  >
                    <p
                      class="StyledProps--font StyledProps--main firstLine"
                      title="January 1, 1970"
                    >
                      January 1, 1970
                    </p>
                    <p
                      class="StyledProps--font StyledProps--main secondLine"
                      title="5:30 AM (Asia/Calcutta)"
                    >
                      5:30 AM (Asia/Calcutta)
                    </p>
                  </div>
                </div>
                <div
                  class="TableV2--cell"
                  role="cell"
                  style="width: 10%;"
                >
                  <p
                    class="StyledProps--font StyledProps--main firstLine"
                  >
                    30 cv.minutes
                  </p>
                </div>
                <div
                  class="TableV2--cell"
                  role="cell"
                  style="width: 13%;"
                >
                  <div
                    class="Layout--horizontal StyledProps--main StyledProps--flex"
                  >
                    <div
                      class="Layout--vertical StyledProps--main"
                    >
                      <p
                        class="StyledProps--font StyledProps--main firstLine affectedServices"
                      />
                      <p
                        class="StyledProps--font StyledProps--main secondLine affectedServices"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="TableV2--cell"
                  role="cell"
                  style="width: 14%;"
                >
                  <p
                    class="StyledProps--font StyledProps--main firstLine"
                    title="Other"
                  >
                    common.other
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SLO Downtime page should render downtime list view 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main PageHeader--container PageHeader--standard StyledProps--flex StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge StyledProps--background-white"
    data-testid="page-header"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <div
        class="PageHeader--breadcrumbsDiv"
      >
        <div
          class="Layout--horizontal StyledProps--main Breadcrumbs--breadcrumbs StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
        >
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
          >
            <a
              class="Breadcrumbs--breadcrumb"
              href="/account/undefined/settings"
            >
              <span
                class="bp3-icon bp3-icon-cog StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-primary7"
                icon="cog"
              >
                <svg
                  data-icon="cog"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    cog
                  </desc>
                  <path
                    d="M15.19 6.39h-1.85c-.11-.37-.27-.71-.45-1.04l1.36-1.36c.31-.31.31-.82 0-1.13l-1.13-1.13a.803.803 0 00-1.13 0l-1.36 1.36c-.33-.17-.67-.33-1.04-.44V.79c0-.44-.36-.8-.8-.8h-1.6c-.44 0-.8.36-.8.8v1.86c-.39.12-.75.28-1.1.47l-1.3-1.3c-.3-.3-.79-.3-1.09 0L1.82 2.91c-.3.3-.3.79 0 1.09l1.3 1.3c-.2.34-.36.7-.48 1.09H.79c-.44 0-.8.36-.8.8v1.6c0 .44.36.8.8.8h1.85c.11.37.27.71.45 1.04l-1.36 1.36c-.31.31-.31.82 0 1.13l1.13 1.13c.31.31.82.31 1.13 0l1.36-1.36c.33.18.67.33 1.04.44v1.86c0 .44.36.8.8.8h1.6c.44 0 .8-.36.8-.8v-1.86c.39-.12.75-.28 1.1-.47l1.3 1.3c.3.3.79.3 1.09 0l1.09-1.09c.3-.3.3-.79 0-1.09l-1.3-1.3c.19-.35.36-.71.48-1.1h1.85c.44 0 .8-.36.8-.8v-1.6a.816.816 0 00-.81-.79zm-7.2 4.6c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <p
                class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
              >
                common.accountSettings
              </p>
            </a>
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
              data-icon="main-chevron-right"
            >
              <svg
                height="8"
                viewBox="0 0 8 14"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="Layout--vertical StyledProps--main"
      >
        <div
          class="Text--withDocsTooltip"
          data-tooltip-id="downtimeHeader"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-h4"
          >
            common.sloDowntimeLabel
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="StyledProps--font StyledProps--main PageBody--pageBody pageBody"
    data-name="page-body"
    data-testid="page-body"
  >
    <div
      class="StyledProps--font StyledProps--main downtimeTabs"
    >
      <div
        class="bp3-tabs Tabs--main Tabs--horizontal"
      >
        <div
          class="bp3-tab-list"
          role="tablist"
        >
          <div
            class="bp3-tab-indicator-wrapper"
            style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
          >
            <div
              class="bp3-tab-indicator"
            />
          </div>
          <div
            aria-controls="bp3-tab-panel_sloDowntimeTabs_Downtime"
            aria-disabled="false"
            aria-expanded="true"
            aria-selected="true"
            class="bp3-tab"
            data-tab-id="Downtime"
            id="bp3-tab-title_sloDowntimeTabs_Downtime"
            role="tab"
            tabindex="0"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-variation-lead"
            >
              cv.sloDowntime.label
            </p>
          </div>
          <div
            aria-controls="bp3-tab-panel_sloDowntimeTabs_History"
            aria-disabled="false"
            aria-expanded="false"
            aria-selected="false"
            class="bp3-tab"
            data-tab-id="History"
            id="bp3-tab-title_sloDowntimeTabs_History"
            role="tab"
            tabindex="0"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-variation-lead"
            >
              common.history
            </p>
          </div>
        </div>
        <div
          aria-hidden="false"
          aria-labelledby="bp3-tab-title_sloDowntimeTabs_Downtime"
          class="bp3-tab-panel"
          id="bp3-tab-panel_sloDowntimeTabs_Downtime"
          role="tabpanel"
        >
          <div
            class="StyledProps--font StyledProps--main StyledProps--margin-xlarge StyledProps--padding-left-small StyledProps--padding-right-small"
          >
            <div
              class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-flex-end"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-xxlarge StyledProps--main StyledProps--flex StyledProps--flex-alignItems-flex-end"
              >
                <button
                  aria-label="cv.sloDowntime.label"
                  class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--variation Button--variation-primary"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
                    icon="plus"
                  >
                    <svg
                      data-icon="plus"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        plus
                      </desc>
                      <path
                        d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp3-button-text"
                  >
                    cv.sloDowntime.label
                  </span>
                </button>
                <div
                  class="bp3-divider divider"
                />
                <div
                  class="StyledProps--font StyledProps--main"
                  style="width: 250px;"
                >
                  <label
                    class="Label--main"
                  >
                    common.monitoredServices
                  </label>
                  <div
                    class="bp3-popover-wrapper Select--main bp3-fill"
                  >
                    <div
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          placeholder="- Select -"
                          style="padding-right: 0px;"
                          type="text"
                          value="All"
                        />
                        <span
                          class="bp3-input-action"
                        >
                          <span
                            class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                            icon="chevron-down"
                          >
                            <svg
                              data-icon="chevron-down"
                              height="14"
                              viewBox="0 0 16 16"
                              width="14"
                            >
                              <desc>
                                chevron-down
                              </desc>
                              <path
                                d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="bp3-input-group ui-search-box ExpandingSearchInput--main   ExpandingSearchInput--alwaysExpanded ExpandingSearchInput--light"
                data-name=""
                style="width: 220px; max-width: 220px;"
              >
                <span
                  class="bp3-icon StyledProps--main ExpandingSearchInput--icon StyledProps--color StyledProps--color-grey700"
                  data-icon="thinner-search"
                >
                  <svg
                    fill="none"
                    height="14"
                    viewBox="0 0 16 16"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </svg>
                </span>
                <input
                  class="bp3-input  ExpandingSearchInput--filter"
                  dir="auto"
                  placeholder="search"
                  style="padding-right: 38px;"
                  type="search"
                  value=""
                />
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main PageBody--pageBody downtimeList"
              data-name="page-body"
              data-testid="page-body"
            >
              <div
                class="StyledProps--font StyledProps--main StyledProps--margin-top-large"
              >
                <div
                  class="TableV2--table"
                >
                  <div
                    class="TableV2--header"
                    role="row"
                  >
                    <div
                      class="TableV2--cell"
                      colspan="1"
                      role="columnheader"
                      style="width: 3.5%;"
                    >
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
                      >
                        
                      </p>
                    </div>
                    <div
                      class="TableV2--cell"
                      colspan="1"
                      role="columnheader"
                      style="width: 4%;"
                    >
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
                      >
                        cv.slos.status
                      </p>
                    </div>
                    <div
                      class="TableV2--cell"
                      colspan="1"
                      role="columnheader"
                      style="width: 14%;"
                    >
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
                      >
                        CV.SLODOWNTIME.DOWNTIMENAME
                      </p>
                    </div>
                    <div
                      class="TableV2--cell"
                      colspan="1"
                      role="columnheader"
                      style="width: 30%;"
                    >
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
                      >
                        CV.SLODOWNTIME.DOWNTIMEWINDOW
                      </p>
                    </div>
                    <div
                      class="TableV2--cell"
                      colspan="1"
                      role="columnheader"
                      style="width: 7%;"
                    >
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
                      >
                        PIPELINE.DURATION
                      </p>
                    </div>
                    <div
                      class="TableV2--cell"
                      colspan="1"
                      role="columnheader"
                      style="width: 13%;"
                    >
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
                      >
                        CV.AFFECTEDSERVICES
                      </p>
                    </div>
                    <div
                      class="TableV2--cell"
                      colspan="1"
                      role="columnheader"
                      style="width: 13%;"
                    >
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
                      >
                        CV.SLODOWNTIME.CATEGORY
                      </p>
                    </div>
                    <div
                      class="TableV2--cell"
                      colspan="1"
                      role="columnheader"
                      style="width: 10%;"
                    >
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
                      >
                        FILESTORE.VIEW.LASTMODIFIEDBY
                      </p>
                    </div>
                    <div
                      class="TableV2--cell"
                      colspan="1"
                      role="columnheader"
                      style="width: 5.5%;"
                    >
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
                      >
                        
                      </p>
                    </div>
                  </div>
                  <div
                    class="TableV2--body"
                  >
                    <div
                      class="TableV2--row TableV2--card"
                      role="row"
                    >
                      <div
                        class="TableV2--cells"
                      >
                        <div
                          class="TableV2--cell"
                          role="cell"
                          style="width: 3.5%;"
                        >
                          <label
                            class="Toggle--toggle StyledProps--main"
                          >
                            <input
                              class="Toggle--input"
                              type="checkbox"
                              value=""
                            />
                            <span
                              class="Toggle--toggleIcon"
                            />
                            
                          </label>
                        </div>
                        <div
                          class="TableV2--cell"
                          role="cell"
                          style="width: 4%;"
                        >
                          <span
                            class="bp3-popover-wrapper"
                          >
                            <span
                              class="bp3-popover-target Text--targetClass"
                            >
                              <p
                                class="StyledProps--font StyledProps--main StyledProps--flex"
                                tabindex="0"
                              >
                                <img
                                  class="statusIcon"
                                  src="test-file-stub"
                                />
                              </p>
                            </span>
                          </span>
                        </div>
                        <div
                          class="TableV2--cell"
                          role="cell"
                          style="width: 14%;"
                        >
                          <p
                            class="StyledProps--font StyledProps--main firstLine"
                            title="all"
                          >
                            all
                          </p>
                        </div>
                        <div
                          class="TableV2--cell"
                          role="cell"
                          style="width: 30%;"
                        >
                          <div
                            class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main"
                          >
                            <p
                              class="StyledProps--font StyledProps--main firstLine"
                              title="cv.sloDowntime.timeFrame (Asia/Calcutta)"
                            >
                              cv.sloDowntime.timeFrame (Asia/Calcutta)
                            </p>
                            <p
                              class="StyledProps--font StyledProps--main secondLine"
                              title="cv.sloDowntime.recurringDowntime"
                            >
                              cv.sloDowntime.recurringDowntime
                            </p>
                          </div>
                        </div>
                        <div
                          class="TableV2--cell"
                          role="cell"
                          style="width: 7%;"
                        >
                          <p
                            class="StyledProps--font StyledProps--main firstLine"
                          >
                            30 cv.minutes
                          </p>
                        </div>
                        <div
                          class="TableV2--cell"
                          role="cell"
                          style="width: 13%;"
                        >
                          <div
                            class="Layout--horizontal StyledProps--main StyledProps--flex"
                          >
                            <div
                              class="Layout--vertical StyledProps--main"
                            >
                              <p
                                class="StyledProps--font StyledProps--main firstLine"
                                title="ALL"
                              >
                                cv.sloDowntime.allMonitoredServices
                              </p>
                            </div>
                          </div>
                        </div>
                        <div
                          class="TableV2--cell"
                          role="cell"
                          style="width: 13%;"
                        >
                          <p
                            class="StyledProps--font StyledProps--main firstLine"
                            title="Deployment"
                          >
                            deploymentText
                          </p>
                        </div>
                        <div
                          class="TableV2--cell"
                          role="cell"
                          style="width: 10%;"
                        >
                          <div
                            class="Layout--vertical StyledProps--main"
                          >
                            <p
                              class="StyledProps--font Text--lineclamp StyledProps--main firstLine"
                              style="--text-line-clamp: 1;"
                              title=""
                            >
                              
                            </p>
                            <p
                              class="StyledProps--font StyledProps--main secondLine"
                            >
                              Feb 13, 2023 12:07 PM
                            </p>
                          </div>
                        </div>
                        <div
                          class="TableV2--cell"
                          role="cell"
                          style="width: 5.5%;"
                        >
                          <div
                            class="Layout--horizontal StyledProps--main actions"
                          >
                            <button
                              class="bp3-button Button--button StyledProps--font StyledProps--main actionIcons StyledProps--padding-small Button--iconOnly Button--withRightIcon Button--variation Button--variation-icon"
                              type="button"
                            >
                              <span
                                class="bp3-icon StyledProps--main"
                                data-icon="Edit"
                              >
                                <svg
                                  height="16"
                                  viewBox="0 0 16 16"
                                  width="16"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                                    fill="currentColor"
                                    fill-rule="evenodd"
                                  />
                                  <path
                                    clip-rule="evenodd"
                                    d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                                    fill="currentColor"
                                    fill-rule="evenodd"
                                    opacity="0.3"
                                  />
                                </svg>
                              </span>
                            </button>
                            <button
                              class="bp3-button Button--button StyledProps--font StyledProps--main actionIcons StyledProps--padding-small Button--iconOnly Button--withRightIcon Button--variation Button--variation-icon"
                              type="button"
                            >
                              <span
                                class="bp3-icon StyledProps--main"
                                data-icon="main-trash"
                              >
                                <svg
                                  height="16"
                                  viewBox="0 0 16 20"
                                  width="16"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M1.143 8.48a1.2 1.2 0 011.189-1.36h10.649a1.2 1.2 0 011.194 1.321l-1.039 10.208a1.2 1.2 0 01-1.193 1.079H3.716a1.2 1.2 0 01-1.189-1.04L1.143 8.48zm11.837-.16H2.332l1.385 10.207h8.226L12.98 8.32zM5.916 1.594a.6.6 0 01.719-.452l4.224.965a.6.6 0 01.452.719L11 4.179l3.86.882a.6.6 0 01-.267 1.17L1.535 3.248a.6.6 0 11.267-1.17l3.805.87.309-1.354zm.86 1.62l3.056.698.175-.768-3.055-.698-.175.768z"
                                    fill="currentColor"
                                    fill-rule="evenodd"
                                  />
                                  <path
                                    clip-rule="evenodd"
                                    d="M8 10.808a.5.5 0 01.5.5v5a.5.5 0 01-1 0v-5a.5.5 0 01.5-.5zm-2.761.012a.5.5 0 01.541.454l.436 4.981a.5.5 0 11-.996.087l-.436-4.98a.5.5 0 01.455-.542zM10.762 10.82a.5.5 0 01.455.541l-.436 4.981a.5.5 0 11-.996-.087l.435-4.98a.5.5 0 01.542-.455z"
                                    fill="currentColor"
                                    fill-rule="evenodd"
                                    opacity="0.3"
                                  />
                                </svg>
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="TableV2--row TableV2--card"
                      role="row"
                    >
                      <div
                        class="TableV2--cells"
                      >
                        <div
                          class="TableV2--cell"
                          role="cell"
                          style="width: 3.5%;"
                        >
                          <label
                            class="Toggle--toggle StyledProps--main"
                          >
                            <input
                              checked=""
                              class="Toggle--input"
                              type="checkbox"
                              value=""
                            />
                            <span
                              class="Toggle--toggleIcon"
                            />
                            
                          </label>
                        </div>
                        <div
                          class="TableV2--cell"
                          role="cell"
                          style="width: 4%;"
                        >
                          <span
                            class="bp3-popover-wrapper"
                          >
                            <span
                              class="bp3-popover-target Text--targetClass"
                            >
                              <p
                                class="StyledProps--font StyledProps--main StyledProps--flex"
                                tabindex="0"
                              >
                                <span
                                  class="bp3-icon StyledProps--main statusIcon"
                                  data-icon="status-running"
                                >
                                  <svg
                                    height="24"
                                    viewBox="0 0 16 17"
                                    width="24"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      clip-rule="evenodd"
                                      d="M14.667 7.746a2 2 0 11-4 0 2 2 0 014 0zM3.333 9.08a1.333 1.333 0 100-2.666 1.333 1.333 0 000 2.666zM8 9.08a1.333 1.333 0 100-2.666A1.333 1.333 0 008 9.08z"
                                      fill="url(#status-running_svg__a)"
                                      fill-rule="evenodd"
                                    />
                                    <defs>
                                      <lineargradient
                                        gradientUnits="userSpaceOnUse"
                                        id="status-running_svg__a"
                                        x1="-2.091"
                                        x2="-0.981"
                                        y1="7.038"
                                        y2="12.481"
                                      >
                                        <stop
                                          stop-color="#73DFE7"
                                        />
                                        <stop
                                          offset="1"
                                          stop-color="#0095F7"
                                        />
                                      </lineargradient>
                                    </defs>
                                  </svg>
                                </span>
                              </p>
                            </span>
                          </span>
                        </div>
                        <div
                          class="TableV2--cell"
                          role="cell"
                          style="width: 14%;"
                        >
                          <p
                            class="StyledProps--font StyledProps--main firstLine"
                            title="one time"
                          >
                            one time
                          </p>
                        </div>
                        <div
                          class="TableV2--cell"
                          role="cell"
                          style="width: 30%;"
                        >
                          <div
                            class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main"
                          >
                            <p
                              class="StyledProps--font StyledProps--main firstLine"
                              title="Feb 14, 2023 2:16 AM - Feb 14, 2023 2:46 AM (Asia/Calcutta)"
                            >
                              Feb 14, 2023 2:16 AM - Feb 14, 2023 2:46 AM (Asia/Calcutta)
                            </p>
                            <p
                              class="StyledProps--font StyledProps--main secondLine"
                              title="COMMON.OCCURRENCE.ONETIME"
                            >
                              COMMON.OCCURRENCE.ONETIME
                            </p>
                          </div>
                        </div>
                        <div
                          class="TableV2--cell"
                          role="cell"
                          style="width: 7%;"
                        >
                          <p
                            class="StyledProps--font StyledProps--main firstLine"
                          >
                            30 cv.minutes
                          </p>
                        </div>
                        <div
                          class="TableV2--cell"
                          role="cell"
                          style="width: 13%;"
                        >
                          <div
                            class="Layout--horizontal StyledProps--main StyledProps--flex"
                          >
                            <div
                              class="Layout--vertical StyledProps--main"
                            >
                              <p
                                class="StyledProps--font StyledProps--main firstLine affectedServices"
                                title="demo-service"
                              >
                                demo-service
                              </p>
                              <p
                                class="StyledProps--font StyledProps--main secondLine affectedServices"
                                title="demo-env"
                              >
                                demo-env
                              </p>
                            </div>
                            <span
                              class="bp3-popover-wrapper bp3-dark"
                            >
                              <span
                                class="bp3-popover-target"
                              >
                                <div
                                  class="StyledProps--font StyledProps--main msBox StyledProps--padding-small StyledProps--margin-right-xlarge"
                                  tabindex="0"
                                >
                                  +
                                  2
                                </div>
                              </span>
                            </span>
                          </div>
                        </div>
                        <div
                          class="TableV2--cell"
                          role="cell"
                          style="width: 13%;"
                        >
                          <p
                            class="StyledProps--font StyledProps--main firstLine"
                            title="ScheduledMaintenance"
                          >
                            cv.sloDowntime.scheduledMaintenance
                          </p>
                        </div>
                        <div
                          class="TableV2--cell"
                          role="cell"
                          style="width: 10%;"
                        >
                          <div
                            class="Layout--vertical StyledProps--main"
                          >
                            <p
                              class="StyledProps--font Text--lineclamp StyledProps--main firstLine"
                              style="--text-line-clamp: 1;"
                              title=""
                            >
                              
                            </p>
                            <p
                              class="StyledProps--font StyledProps--main secondLine"
                            >
                              Feb 13, 2023 11:59 AM
                            </p>
                          </div>
                        </div>
                        <div
                          class="TableV2--cell"
                          role="cell"
                          style="width: 5.5%;"
                        >
                          <div
                            class="Layout--horizontal StyledProps--main actions"
                          >
                            <button
                              class="bp3-button Button--button StyledProps--font StyledProps--main actionIcons StyledProps--padding-small Button--iconOnly Button--withRightIcon Button--variation Button--variation-icon"
                              type="button"
                            >
                              <span
                                class="bp3-icon StyledProps--main"
                                data-icon="Edit"
                              >
                                <svg
                                  height="16"
                                  viewBox="0 0 16 16"
                                  width="16"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                                    fill="currentColor"
                                    fill-rule="evenodd"
                                  />
                                  <path
                                    clip-rule="evenodd"
                                    d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                                    fill="currentColor"
                                    fill-rule="evenodd"
                                    opacity="0.3"
                                  />
                                </svg>
                              </span>
                            </button>
                            <button
                              class="bp3-button Button--button StyledProps--font StyledProps--main actionIcons StyledProps--padding-small Button--iconOnly Button--withRightIcon Button--variation Button--variation-icon"
                              type="button"
                            >
                              <span
                                class="bp3-icon StyledProps--main"
                                data-icon="main-trash"
                              >
                                <svg
                                  height="16"
                                  viewBox="0 0 16 20"
                                  width="16"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M1.143 8.48a1.2 1.2 0 011.189-1.36h10.649a1.2 1.2 0 011.194 1.321l-1.039 10.208a1.2 1.2 0 01-1.193 1.079H3.716a1.2 1.2 0 01-1.189-1.04L1.143 8.48zm11.837-.16H2.332l1.385 10.207h8.226L12.98 8.32zM5.916 1.594a.6.6 0 01.719-.452l4.224.965a.6.6 0 01.452.719L11 4.179l3.86.882a.6.6 0 01-.267 1.17L1.535 3.248a.6.6 0 11.267-1.17l3.805.87.309-1.354zm.86 1.62l3.056.698.175-.768-3.055-.698-.175.768z"
                                    fill="currentColor"
                                    fill-rule="evenodd"
                                  />
                                  <path
                                    clip-rule="evenodd"
                                    d="M8 10.808a.5.5 0 01.5.5v5a.5.5 0 01-1 0v-5a.5.5 0 01.5-.5zm-2.761.012a.5.5 0 01.541.454l.436 4.981a.5.5 0 11-.996.087l-.436-4.98a.5.5 0 01.455-.542zM10.762 10.82a.5.5 0 01.455.541l-.436 4.981a.5.5 0 11-.996-.087l.435-4.98a.5.5 0 01.542-.455z"
                                    fill="currentColor"
                                    fill-rule="evenodd"
                                    opacity="0.3"
                                  />
                                </svg>
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="TableV2--row TableV2--card"
                      role="row"
                    >
                      <div
                        class="TableV2--cells"
                      >
                        <div
                          class="TableV2--cell"
                          role="cell"
                          style="width: 3.5%;"
                        >
                          <label
                            class="Toggle--toggle StyledProps--main"
                          >
                            <input
                              checked=""
                              class="Toggle--input"
                              type="checkbox"
                              value=""
                            />
                            <span
                              class="Toggle--toggleIcon"
                            />
                            
                          </label>
                        </div>
                        <div
                          class="TableV2--cell"
                          role="cell"
                          style="width: 4%;"
                        >
                          <span
                            class="bp3-popover-wrapper"
                          >
                            <span
                              class="bp3-popover-target Text--targetClass"
                            >
                              <p
                                class="StyledProps--font StyledProps--main StyledProps--flex"
                                tabindex="0"
                              >
                                <img
                                  class="statusIcon"
                                  src="test-file-stub"
                                />
                              </p>
                            </span>
                          </span>
                        </div>
                        <div
                          class="TableV2--cell"
                          role="cell"
                          style="width: 14%;"
                        >
                          <p
                            class="StyledProps--font StyledProps--main firstLine"
                            title="test90"
                          >
                            test90
                          </p>
                        </div>
                        <div
                          class="TableV2--cell"
                          role="cell"
                          style="width: 30%;"
                        >
                          <div
                            class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main"
                          >
                            <p
                              class="StyledProps--font StyledProps--main firstLine"
                              title="cv.sloDowntime.timeFrame (Asia/Calcutta)"
                            >
                              cv.sloDowntime.timeFrame (Asia/Calcutta)
                            </p>
                            <p
                              class="StyledProps--font StyledProps--main secondLine"
                              title="cv.sloDowntime.recurringDowntime"
                            >
                              cv.sloDowntime.recurringDowntime
                            </p>
                          </div>
                        </div>
                        <div
                          class="TableV2--cell"
                          role="cell"
                          style="width: 7%;"
                        >
                          <p
                            class="StyledProps--font StyledProps--main firstLine"
                          >
                            30 cv.minutes
                          </p>
                        </div>
                        <div
                          class="TableV2--cell"
                          role="cell"
                          style="width: 13%;"
                        >
                          <div
                            class="Layout--horizontal StyledProps--main StyledProps--flex"
                          >
                            <div
                              class="Layout--vertical StyledProps--main"
                            >
                              <p
                                class="StyledProps--font StyledProps--main firstLine affectedServices"
                                title="newone"
                              >
                                newone
                              </p>
                              <p
                                class="StyledProps--font StyledProps--main secondLine affectedServices"
                                title="datadog"
                              >
                                datadog
                              </p>
                            </div>
                            <span
                              class="bp3-popover-wrapper bp3-dark"
                            >
                              <span
                                class="bp3-popover-target"
                              >
                                <div
                                  class="StyledProps--font StyledProps--main msBox StyledProps--padding-small StyledProps--margin-right-xlarge"
                                  tabindex="0"
                                >
                                  +
                                  2
                                </div>
                              </span>
                            </span>
                          </div>
                        </div>
                        <div
                          class="TableV2--cell"
                          role="cell"
                          style="width: 13%;"
                        >
                          <p
                            class="StyledProps--font StyledProps--main firstLine"
                            title="Deployment"
                          >
                            deploymentText
                          </p>
                        </div>
                        <div
                          class="TableV2--cell"
                          role="cell"
                          style="width: 10%;"
                        >
                          <div
                            class="Layout--vertical StyledProps--main"
                          >
                            <p
                              class="StyledProps--font Text--lineclamp StyledProps--main firstLine"
                              style="--text-line-clamp: 1;"
                              title=""
                            >
                              
                            </p>
                            <p
                              class="StyledProps--font StyledProps--main secondLine"
                            >
                              Feb 9, 2023 12:27 PM
                            </p>
                          </div>
                        </div>
                        <div
                          class="TableV2--cell"
                          role="cell"
                          style="width: 5.5%;"
                        >
                          <div
                            class="Layout--horizontal StyledProps--main actions"
                          >
                            <button
                              class="bp3-button Button--button StyledProps--font StyledProps--main actionIcons StyledProps--padding-small Button--iconOnly Button--withRightIcon Button--variation Button--variation-icon"
                              type="button"
                            >
                              <span
                                class="bp3-icon StyledProps--main"
                                data-icon="Edit"
                              >
                                <svg
                                  height="16"
                                  viewBox="0 0 16 16"
                                  width="16"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                                    fill="currentColor"
                                    fill-rule="evenodd"
                                  />
                                  <path
                                    clip-rule="evenodd"
                                    d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                                    fill="currentColor"
                                    fill-rule="evenodd"
                                    opacity="0.3"
                                  />
                                </svg>
                              </span>
                            </button>
                            <button
                              class="bp3-button Button--button StyledProps--font StyledProps--main actionIcons StyledProps--padding-small Button--iconOnly Button--withRightIcon Button--variation Button--variation-icon"
                              type="button"
                            >
                              <span
                                class="bp3-icon StyledProps--main"
                                data-icon="main-trash"
                              >
                                <svg
                                  height="16"
                                  viewBox="0 0 16 20"
                                  width="16"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M1.143 8.48a1.2 1.2 0 011.189-1.36h10.649a1.2 1.2 0 011.194 1.321l-1.039 10.208a1.2 1.2 0 01-1.193 1.079H3.716a1.2 1.2 0 01-1.189-1.04L1.143 8.48zm11.837-.16H2.332l1.385 10.207h8.226L12.98 8.32zM5.916 1.594a.6.6 0 01.719-.452l4.224.965a.6.6 0 01.452.719L11 4.179l3.86.882a.6.6 0 01-.267 1.17L1.535 3.248a.6.6 0 11.267-1.17l3.805.87.309-1.354zm.86 1.62l3.056.698.175-.768-3.055-.698-.175.768z"
                                    fill="currentColor"
                                    fill-rule="evenodd"
                                  />
                                  <path
                                    clip-rule="evenodd"
                                    d="M8 10.808a.5.5 0 01.5.5v5a.5.5 0 01-1 0v-5a.5.5 0 01.5-.5zm-2.761.012a.5.5 0 01.541.454l.436 4.981a.5.5 0 11-.996.087l-.436-4.98a.5.5 0 01.455-.542zM10.762 10.82a.5.5 0 01.455.541l-.436 4.981a.5.5 0 11-.996-.087l.435-4.98a.5.5 0 01.542-.455z"
                                    fill="currentColor"
                                    fill-rule="evenodd"
                                    opacity="0.3"
                                  />
                                </svg>
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="TableV2--row TableV2--card"
                      role="row"
                    >
                      <div
                        class="TableV2--cells"
                      >
                        <div
                          class="TableV2--cell"
                          role="cell"
                          style="width: 3.5%;"
                        >
                          <label
                            class="Toggle--toggle StyledProps--main"
                          >
                            <input
                              checked=""
                              class="Toggle--input"
                              type="checkbox"
                              value=""
                            />
                            <span
                              class="Toggle--toggleIcon"
                            />
                            
                          </label>
                        </div>
                        <div
                          class="TableV2--cell"
                          role="cell"
                          style="width: 4%;"
                        >
                          <span
                            class="bp3-popover-wrapper"
                          >
                            <span
                              class="bp3-popover-target Text--targetClass"
                            >
                              <p
                                class="StyledProps--font StyledProps--main StyledProps--flex"
                                tabindex="0"
                              >
                                <img
                                  class="statusIcon"
                                  src="test-file-stub"
                                />
                              </p>
                            </span>
                          </span>
                        </div>
                        <div
                          class="TableV2--cell"
                          role="cell"
                          style="width: 14%;"
                        >
                          <p
                            class="StyledProps--font StyledProps--main firstLine"
                            title=""
                          >
                            
                          </p>
                        </div>
                        <div
                          class="TableV2--cell"
                          role="cell"
                          style="width: 30%;"
                        >
                          <div
                            class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main"
                          >
                            <p
                              class="StyledProps--font StyledProps--main firstLine"
                              title="Jan 1, 1970 5:30 AM - Jan 1, 1970 6:00 AM (Asia/Calcutta)"
                            >
                              Jan 1, 1970 5:30 AM - Jan 1, 1970 6:00 AM (Asia/Calcutta)
                            </p>
                            <p
                              class="StyledProps--font StyledProps--main secondLine"
                              title="COMMON.OCCURRENCE.ONETIME"
                            >
                              COMMON.OCCURRENCE.ONETIME
                            </p>
                          </div>
                        </div>
                        <div
                          class="TableV2--cell"
                          role="cell"
                          style="width: 7%;"
                        >
                          <p
                            class="StyledProps--font StyledProps--main firstLine"
                          >
                            30 cv.minutes
                          </p>
                        </div>
                        <div
                          class="TableV2--cell"
                          role="cell"
                          style="width: 13%;"
                        >
                          <div
                            class="Layout--horizontal StyledProps--main StyledProps--flex"
                          >
                            <div
                              class="Layout--vertical StyledProps--main"
                            >
                              <p
                                class="StyledProps--font StyledProps--main firstLine affectedServices"
                              />
                              <p
                                class="StyledProps--font StyledProps--main secondLine affectedServices"
                              />
                            </div>
                          </div>
                        </div>
                        <div
                          class="TableV2--cell"
                          role="cell"
                          style="width: 13%;"
                        >
                          <p
                            class="StyledProps--font StyledProps--main firstLine"
                            title="Other"
                          >
                            common.other
                          </p>
                        </div>
                        <div
                          class="TableV2--cell"
                          role="cell"
                          style="width: 10%;"
                        >
                          <div
                            class="Layout--vertical StyledProps--main"
                          >
                            <p
                              class="StyledProps--font Text--lineclamp StyledProps--main firstLine"
                              style="--text-line-clamp: 1;"
                              title=""
                            >
                              
                            </p>
                            <p
                              class="StyledProps--font StyledProps--main secondLine"
                            >
                              Jan 1, 1970 12:00 AM
                            </p>
                          </div>
                        </div>
                        <div
                          class="TableV2--cell"
                          role="cell"
                          style="width: 5.5%;"
                        >
                          <div
                            class="Layout--horizontal StyledProps--main actions"
                          >
                            <button
                              class="bp3-button Button--button StyledProps--font StyledProps--main actionIcons StyledProps--padding-small Button--iconOnly Button--withRightIcon Button--variation Button--variation-icon"
                              type="button"
                            >
                              <span
                                class="bp3-icon StyledProps--main"
                                data-icon="Edit"
                              >
                                <svg
                                  height="16"
                                  viewBox="0 0 16 16"
                                  width="16"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                                    fill="currentColor"
                                    fill-rule="evenodd"
                                  />
                                  <path
                                    clip-rule="evenodd"
                                    d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                                    fill="currentColor"
                                    fill-rule="evenodd"
                                    opacity="0.3"
                                  />
                                </svg>
                              </span>
                            </button>
                            <button
                              class="bp3-button Button--button StyledProps--font StyledProps--main actionIcons StyledProps--padding-small Button--iconOnly Button--withRightIcon Button--variation Button--variation-icon"
                              type="button"
                            >
                              <span
                                class="bp3-icon StyledProps--main"
                                data-icon="main-trash"
                              >
                                <svg
                                  height="16"
                                  viewBox="0 0 16 20"
                                  width="16"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M1.143 8.48a1.2 1.2 0 011.189-1.36h10.649a1.2 1.2 0 011.194 1.321l-1.039 10.208a1.2 1.2 0 01-1.193 1.079H3.716a1.2 1.2 0 01-1.189-1.04L1.143 8.48zm11.837-.16H2.332l1.385 10.207h8.226L12.98 8.32zM5.916 1.594a.6.6 0 01.719-.452l4.224.965a.6.6 0 01.452.719L11 4.179l3.86.882a.6.6 0 01-.267 1.17L1.535 3.248a.6.6 0 11.267-1.17l3.805.87.309-1.354zm.86 1.62l3.056.698.175-.768-3.055-.698-.175.768z"
                                    fill="currentColor"
                                    fill-rule="evenodd"
                                  />
                                  <path
                                    clip-rule="evenodd"
                                    d="M8 10.808a.5.5 0 01.5.5v5a.5.5 0 01-1 0v-5a.5.5 0 01.5-.5zm-2.761.012a.5.5 0 01.541.454l.436 4.981a.5.5 0 11-.996.087l-.436-4.98a.5.5 0 01.455-.542zM10.762 10.82a.5.5 0 01.455.541l-.436 4.981a.5.5 0 11-.996-.087l.435-4.98a.5.5 0 01.542-.455z"
                                    fill="currentColor"
                                    fill-rule="evenodd"
                                    opacity="0.3"
                                  />
                                </svg>
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
